--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,11 @@
 [profile.default]
-src = "src"
-out = "out"
+src  = "src"
+out  = "out"
 libs = ["lib"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+solc_version      = "0.8.25"
+optimizer         = true
+optimizer_runs    = 10000
+
+fs_permissions    = [{ access = "read", path = "./" }]
+
